0.1.5 * Fixed linebreaks in view mode not working. * Made the Post History controls responsive. * Changed default post category to work, since that is primarily what this website will be used for. * Added bottom margin to buttons in 'Explore My Work' section. * Changed glitch project name, updated code to use it too.

--- a/MyBlog-fontend/src/app/app.component.css
+++ b/MyBlog-fontend/src/app/app.component.css
@@ -33,10 +33,19 @@ button {
 
 #post-container-controls {
   display: flex;
-  margin-bottom: 10px;
-  height: 38px;
+  flex-wrap: wrap;
 }
 
 #search_field {
-  flex-basis: 400px
+  flex-basis: 400px;
+  height: 38px;
+  margin-bottom: 10px;
+}
+
+p {
+  white-space: pre-wrap;
+}
+
+.btn-footer {
+  margin-bottom: 10px;
 }
